--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,86 @@
-/* You can add global styles to this file, and also import other style files */
+
+
+  /* Make the image fully responsive */
+ .carousel-inner img {
+    width: 100%;
+    height: 100%;
+   }
+ 
+ .carousel slide{
+   height: 500px;
+   
+ }
+ 
+ 
+ a:hover{
+   background-color:white;
+ 
+ }
+ 
+ 
+ body {
+   font-family: Arial, Helvetica, sans-serif;
+   margin: 0;
+ }
+ 
+ html {
+   box-sizing: border-box;
+ }
+ 
+ *, *:before, *:after {
+   box-sizing: inherit;
+ }
+ 
+ .column {
+   float: left;
+   width: 33.3%;
+   margin-bottom: 16px;
+   padding: 0 8px;
+ }
+ 
+ .card {
+   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+   margin: 8px;
+ }
+ 
+ 
+ 
+ .container {
+   padding: 0 16px;
+ }
+ 
+ .container::after, .row::after {
+   content: "";
+   clear: both;
+   display: table;
+ }
+ 
+ .title {
+   color: grey;
+ }
+ 
+ .button {
+   border: none;
+   outline: 0;
+   display: inline-block;
+   padding: 8px;
+   color: white;
+   background-color: #000;
+   text-align: center;
+   cursor: pointer;
+   width: 100%;
+ }
+ 
+ .button:hover {
+   background-color: #555;
+ }
+ @media screen and (max-width: 650px) {
+   .column {
+     width: 100%;
+     display: block;
+   }
+ }
+ 
+
+
+ 
